--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-
+*{
+  padding: 0px;
+  margin: 0px;
+}
 body{
   margin:auto;
   max-width: 1440px;
   position: relative;
+  /* background: red; */
 }
